--- a/styles/index.css
+++ b/styles/index.css
@@ -92,18 +92,22 @@ main img {
     }
 
 /* Section3 */
+
  .section3 img {
+    padding: 5%;
     border-radius: 3pc;
  }
-
- .section5-pic img{
+main .section5-pic {
+    padding: 0;
+}
+.section5-pic .row {
+    padding: 0;
+    margin: 0;
+}
+.section5-pic img{
     border-radius: 100pc;
-    padding: 5%;
- }
-
-
-
-
+    width: 100%;
+}
 footer {
     margin:100px auto;
     text-align: center;
@@ -127,9 +131,6 @@ footer {
   }
 
 
-.section3 img {
-    padding: 5%;
-}
 
 
 
